--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Etch a Sketch</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -23,7 +23,12 @@
           value="16"
           onchange="changesize(this.value)"
         />
-        <button>Set Size</button>
+        <button
+          onclick="changesize(document.querySelector('input[type=text]').value)"
+        >
+          Set Size
+        </button>
+
         <button onclick="reset()"><span class="text">Reset</span></button>
       </div>
     </main>
